@@ -88,6 +88,8 @@ void init_charset(charset_t cs)
       charset_array[D_H] = 'h';
       charset_array[D_h] = 'h';
       charset_array[D_R] = 'r';
+      charset_array[D_ALT_R] = 'r';
+      charset_array[D_r] = 'r';
       charset_array[D_P] = 'p';
       charset_array[D_N] = 'n';
       charset_array[D_n] = 'n';
