@@ -4,6 +4,7 @@ Noteworthy Changes in ssocr Releases
 Upcoming Version ?.??.? (????-??-??):
 -------------------------------------
  * Add recognition of lower case variant of character 'h' to full charset
+ * Add recognition of lower case variant of character 'r' to full charset
  * Documentation improvements
  * Error, warning, and debug message improvements
 
